# paintr

./: Cargo.toml  README.md  bors.toml
.github/workflows/: ci.yml
crates/paintr/: Cargo.toml
crates/paintr-app/: Cargo.toml
crates/paintr-app/src/: commands.rs  dialogs.rs  main.rs  menu.rs  theme_ext.rs  tools.rs  ui.rs  widgets.rs
crates/paintr-app/src/tools/: move_tool.rs  select_tool.rs
crates/paintr-app/src/widgets/: canvas.rs  editor.rs  modal.rs  named.rs  notif_bar.rs  painter.rs  radio.rs  snack_bar.rs  svg.rs
crates/paintr/src/: canvas.rs  clipboard.rs  dialogs.rs  edit.rs  image_utils.rs  lib.rs  main.rs  menu.rs  paintable.rs  plane.rs  selection.rs  selections.rs  svgimage.rs  test_utils.rs  tools.rs  ui.rs  widgets.rs
crates/paintr/src/actions/: mod.rs
crates/paintr/src/clipboard/: linux.rs
crates/paintr/src/selections/: rect.rs
crates/paintr/src/svgimage/: parser.rs
crates/paintr/src/tools/: brush_tool.rs  move_tool.rs  select_tool.rs
crates/paintr/src/widgets/: editor.rs  named.rs  radio.rs
crates/paintr_core/: Cargo.toml
crates/paintr_core/src/: actions.rs  canvas.rs  clipboard.rs  edit.rs  image_utils.rs  lens.rs  lib.rs  paintable.rs  plane.rs  selections.rs
crates/paintr_core/src/actions/: mod.rs
crates/paintr_core/src/clipboard/: macos.rs  windows.rs
crates/paintr_core/src/selections/: rect.rs
crates/paintr_widgets/: Cargo.toml
crates/paintr_widgets/src/: lib.rs  widgets.rs
crates/paintr_widgets/src/widgets/: canvas.rs  conditional.rs  editor.rs  named.rs  notif_bar.rs  painter.rs
resources/i18n/en-US/: builtin.ftl
xtask/: Cargo.toml
xtask/src/: main.rs
