[package]
name = "paintr-app"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paintr={path="../paintr"}

# We use master for druid becuse druid is fast moving project
druid = { path = "../../../druid/druid" }
