[package]
name = "paintr"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.4", features = ["svg"] }
byteorder = "1.3.2"
image = "0.22.3"
imageproc = "0.19.2"
svg = "0.6.0"
log = "0.4.8"
