[package]
name = "paintr"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { version = "0.7.0", features = ["svg"] }
byteorder = "1.3.4"
image = "0.23.12"
imageproc = "0.22.0"
svg = "0.8.0"
log = "0.4.11"
anyhow = "1.0.37"
