[package]
name = "paintr_widgets"
version = "0.1.0"
authors = ["Edwin Cheng <edwin0cheng@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
paintr_core = {path = "../paintr_core"}

druid = { version = "0.7.0", features = ["svg"] }
image = "0.23.12"